--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <span class="arrow">▼</span>
       </div>
       <div class="faq-answer">
-        <p>The official contract address is <strong>[INSERT CONTRACT ADDRESS]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
+        <p>The official contract address is <strong>[TO BE REALEASED...]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
       </div>
     </div>
     <div class="faq-item">
@@ -153,7 +153,7 @@
         <span class="arrow">▼</span>
       </div>
       <div class="faq-answer">
-        <p>You can buy $URCR7 on PancakeSwap using Binance Coin (BNB). Follow the steps in the "How to Buy" section above.</p>
+        <p>You can buy $URCR7 on Phantom using Solana (SOL). Follow the steps in the "How to Buy" section above.</p>
       </div>
     </div>
     <div class="faq-item">
@@ -180,7 +180,7 @@
         <span class="arrow">▼</span>
       </div>
       <div class="faq-answer">
-        <p>CR7 Memecoin is built on the Binance Smart Chain (BSC).</p>
+        <p>CR7 Memecoin is built on the Solana Chain (SOL).</p>
       </div>
     </div>
     <div class="faq-item">
