--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>How to Buy $URCR7</h2>
     <ol>
       <li>Download and set up MetaMask or Trust Wallet.</li>
-      <li>Buy Binance Coin (BNB) from an exchange.</li>
+      <li>Buy SolANA (BNB) from an exchange.</li>
       <li>Transfer BNB to your wallet.</li>
       <li>Connect your wallet to PancakeSwap.</li>
       <li>Swap BNB for $URCR7 using the contract address.</li>
