--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
    <section id="how-to-buy">
     <h2>How to Buy $URCR7</h2>
     <ol>
-      <li>Download and set up MetaMask or Trust Wallet.</li>
-      <li>Buy SolANA (BNB) from an exchange.</li>
-      <li>Transfer BNB to your wallet.</li>
-      <li>Connect your wallet to PancakeSwap.</li>
-      <li>Swap BNB for $URCR7 using the contract address.</li>
-    </ol>
+  <li>Download and set up Phantom Wallet.</li>
+  <li>Buy SOL using Stripe or Topper within Phantom.</li>
+  <li>Verify your identity if required by the platform.</li>
+  <li>Swap SOL for $URCR7 using the correct contract address.</li>
+  <li>The URCR7 Coins will be added to your wallet.</li>
+</ol>
     <button id="buy-now-button" class="cta-button">Buy Now</button>
   </section>
 
@@ -144,7 +144,7 @@
         <span class="arrow">▼</span>
       </div>
       <div class="faq-answer">
-        <p>The official contract address is <strong>[TO BE REALEASED...]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
+        <p>The official contract address is <strong>[TO BE RELEASED...]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
       </div>
     </div>
     <div class="faq-item">
