--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
    <section id="how-to-buy">
     <h2>How to Buy $URCR7</h2>
     <ol>
-  <li>Download and set up Phantom Wallet.</li>
-  <li>Buy SOL using Stripe or Topper within Phantom.</li>
-  <li>Verify your identity if required by the platform.</li>
-  <li>Swap SOL for $URCR7 using the correct contract address.</li>
-  <li>The URCR7 Coins will be added to your wallet.</li>
+  <li>Install the Phantom or Solflare extension in your browser and set up the wallet.</li>
+  <li>Connect your wallet to the Jupiter website at https://jup.ag/onboard.</li>
+  <li>Buy Solana (SOL) and transfer it to your connected wallet.</li>
+  <li>Use the swap feature to convert SOL to $URCR7 tokens.</li>
+  <li>Confirm the transaction and check your wallet for the $URCR7 tokens.</li>
 </ol>
     <button id="buy-now-button" class="cta-button">Buy Now</button>
   </section>
