--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="footer-content">
       <div class="footer-links">
         <a href="https://x.com/cr7coin_onsol" target="_blank">Twitter</a>
-        <a href="https://t.me/+3JFPGUAnfE03NjU0" target="_blank">Telegram</a>
+        <a href="https://t.me/urcr7coin" target="_blank">Telegram</a>
       </div>
       <p class="footer-disclaimer">
         &copy; 2025 CR7 Memecoin. All Rights Reserved.<br>
