--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <span class="arrow">▼</span>
       </div>
       <div class="faq-answer">
-        <p>The official contract address is <strong>[TO BE RELEASED...]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
+        <p>The official contract address is <strong>[AaBEkcrX1eybF4xDgLcfKQGXg2taq9J7wm4UCo5xdW8j]</strong>, and the symbol is <strong>$URCR7</strong>.</p>
       </div>
     </div>
     <div class="faq-item">
